Add java.xml.bind to java_opts